syntax = "proto2";

package protobuf.contrib.j2cl.protos;

option java_package = "com.google.protobuf.contrib.j2cl.protos";

// REMOVED_BY_GENRULE option java_multiple_files = true;

import "third_party/java_src/j2cl_proto/java/com/google/protobuf/contrib/j2cl/options/js_enum.proto";

enum SparseEnum {
  UNKNOWN = 0;
  TEN = 10;
  TWENTY = 20;
}

enum DenseEnum {
  DEFAULT = 0;
  ONE = 1;
  TWO = 2;
  THREE = 3;
  FOUR = 4;
  FIVE = 5;
  SIX = 6;
}

enum NativeEnum {
  option (contrib.j2cl.options.generate_js_enum) = true;

  NATIVE_ONE = 1;
  NATIVE_TWO = 2;
  NATIVE_THREE = 3;
}

message TestProto {
  optional SparseEnum sparse_enum = 1;
  optional DenseEnum dense_enum = 2;
  optional NativeEnum native_enum = 3;
}
